--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "ejs": "~2.3.1",
+    "escape-html": "^1.0.1",
     "express": "~4.12.2",
+    "html-entities": "^1.1.2",
+    "mongodb": "^2.0.27",
+    "monk": "^1.0.1",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0"
   }
